--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# this is the ".gitignore" file
+
+# ignore secret environment variable values in the ".env" file:
+.env
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +132,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
